--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<img src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg" width=300;>
+		<p>Facebook helps you connect and share with the people in your life</p>
+		
+	</div>
+
+	<div class="d2">
+		<form>
+			<input type="text" placeholder="Email address or phone number">
+			<input type="password" placeholder="password">
+			<button class="b1">Log in</button>
+			<a href="#">Forgotten account?</a>
+			
+			<button class="b2">Create new account</button>
+		</form>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
