--- a/main.html
+++ b/main.html
@@ -8,18 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
-		<img src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg" width=300;>
+	<div CLASS="left">
+		<img src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg" >
 		<p>Facebook helps you connect and share with the people in your life</p>
 		
 	</div>
 
-	<div class="d2">
+	<div class="right">
 		<form>
-			<input type="text" placeholder="Email address or phone number">
-			<input type="password" placeholder="Password">
-			<button class="b1">Log in</button>
-			<a href="#">Forgotten account?</a>
+			<input type="text" id="email" placeholder="Email address or phone number">
+			<input type="password" placeholder="Password" id="password">
+			<button class="signup">Log in</button>
+			<a href="/recover/initiate">Forgotten account?</a>
 			
 			<button class="b2">Create new account</button>
 		</form>
