--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<form>
 			<input type="text" id="email" placeholder="Email address or phone number">
 			<input type="password" placeholder="Password" id="password">
-			<button class="signup">Log in</button>
+			<a href="/reg/>"<button class="signup">Log in</button></a>
 			<a href="/recover/initiate">Forgotten account?</a>
 			
 			<button class="b2">Create new account</button>
